using WorkScedulerApp.Data;

namespace WorkScedulerApp.ViewModels;

public partial class HomePageViewModel : PageViewModel
{
    public HomePageViewModel()
    {
        PageName = ApplicationPageNames.Home;
    }
}