@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam roundcorner 15
skinparam rectangle {
  BackgroundColor<<ViewModel>> #ddeeff
  BackgroundColor<<Singleton>> #eeeeee
  BackgroundColor<<Utility>> #fff2cc
  BackgroundColor<<Factory>> #ddffdd
  BackgroundColor<<Model>> #ffdddd
  BorderColor black
}

title Work Scheduler Application - High-Level Architecture

' ============================
' ViewModels (MVVM)
' ============================
class MainViewModel <<ViewModel>>
class WorkLoadsPageViewModel <<ViewModel>>
class WeeklyWorkLoadsPageViewModel <<ViewModel>>
class EmployeesPageViewModel <<ViewModel>>
class WeeklySchedulePageViewModel <<ViewModel>>
class HomePageViewModel <<ViewModel>>
class SettingsPageViewModel <<ViewModel>>

' ============================
' Data Layer
' ============================
class DatabaseHandler <<Singleton>>
class ScheduleAutoAssigner <<Utility>>

' ============================
' Factory + Models
' ============================
class PageFactory <<Factory>>
class Employee <<Model>>

' ============================
' Relationships
' ============================
MainViewModel --> PageFactory : creates pages
MainViewModel --> HomePageViewModel : displays active page
MainViewModel --> SettingsPageViewModel
MainViewModel --> WorkLoadsPageViewModel
MainViewModel --> EmployeesPageViewModel
MainViewModel --> WeeklyWorkLoadsPageViewModel
MainViewModel --> WeeklySchedulePageViewModel

WorkLoadsPageViewModel --> DatabaseHandler
EmployeesPageViewModel --> DatabaseHandler
WeeklyWorkLoadsPageViewModel --> DatabaseHandler
WeeklySchedulePageViewModel --> DatabaseHandler
EmployeesPageViewModel --> Employee
WeeklySchedulePageViewModel --> ScheduleAutoAssigner
ScheduleAutoAssigner --> DatabaseHandler
@enduml
